# kmer-count

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  count.rs  main.rs
