[package]
name = "kmer-count"
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Noam Teyssier <noam.teyssier@arcinstitute.org>"]

[dependencies]
anyhow = "1.0.100"
binseq = "0.7.5"
clap = { version = "4.5.50", features = ["derive"] }
csv = "1.4.0"
hashbrown = "0.16.0"
num_cpus = "1.17.0"
paraseq = "0.4.3"
parking_lot = "0.12.5"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }

[profile.release]
debug = true
